--- a/packages/feature_setting/pubspec.yaml
+++ b/packages/feature_setting/pubspec.yaml
@@ -21,7 +21,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
+  
+resolution: workspace
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
