--- a/packages/feature_watchlist/pubspec.yaml
+++ b/packages/feature_watchlist/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^3.2.0 
 
+resolution: workspace
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
