--- a/packages/shared_ui/pubspec.yaml
+++ b/packages/shared_ui/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+resolution: workspace
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
