--- a/melos.yaml
+++ b/melos.yaml
@@ -5,5 +5,17 @@ packages:
   - packages/**
 
 commands:
+  bootstrap:
+    usePubspecOverrides: true
+  analyze:
+    run: melos exec -- "flutter analyze"
+    description: Run `flutter analyze` in all packages
+  
+  format:
+    run: melos exec -- "flutter format . --set-exit-if-changed"
+    description: Run `flutter format .` in all packages
+
   test:
-    exec: flutter test --no-pub
+    # Only run the test command when the package has a test directory
+    run: melos exec --dir-exists=test -- "flutter test"
+    description: Run `flutter test` in all packages
