--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -24,16 +24,16 @@ workflows:
         script: |
           # Melos akan menjalankan 'flutter pub get' di semua modul
           melos run pub-get
-          scripts:
+
       - name: Melos Bootstrap
         script: |
-           dart pub global activate melos
-           melos bootstrap 
-            - name: Run Analyze
-        script: melos run analyze
+          melos bootstrap  # Memastikan semua dependensi di-bootstrap
+
+      - name: Run Analyze
+        script: melos run analyze  # Menjalankan analisis kode
 
       - name: Run Format
-        script: melos run format
+        script: melos run format  # Menjalankan format kode
 
       # --- Unit & Widget Tests ---
       - name: Run tests on all packages
@@ -45,7 +45,7 @@ workflows:
       - name: Build Android APK
         script: |
           # Gunakan 'flutter build apk' untuk membuat APK release
-          flutter build apk --release 
+          flutter build apk --release
 
       # --- Build iOS App ---
       - name: Build iOS IPA
@@ -63,8 +63,8 @@ workflows:
       email:
         recipients:
           - azizkandias11@gmail.com
+
     triggering:
       events:
         - pull_request
         - push
-
