enhance melos configuration; add analyze, format, and test scripts for improved package management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,17 @@ melos:
     pub-get:
       run: flutter pub get
       description: Run `flutter pub get` in all packages
-      
+    analyze:
+      run: melos exec -- "flutter analyze"
+      description: Run `flutter analyze` in all packages
+    format:
+      run: melos exec -- "flutter format . --set-exit-if-changed"
+      description: Run `flutter format .` in all packages
+    test:
+      # Only run the test command when the package has a test directory
+      run: melos exec --dir-exists=test -- "flutter test"
+      description: Run `flutter test` in all packages
+
 workspace:
   - packages/core
   - packages/shared_ui
