--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -42,15 +42,15 @@ workflows:
           flutter build apk --release
 
       # --- Build iOS App ---
-      - name: Build iOS IPA
-        script: |
-          # Gunakan 'flutter build ipa' untuk membuat IPA release
-          flutter build ipa --release 
+      # - name: Build iOS IPA
+      #   script: |
+      #     # Gunakan 'flutter build ipa' untuk membuat IPA release
+      #     flutter build ipa --release 
           
     # Lokasi file hasil build
     artifacts:
       - build/app/outputs/flutter-apk/*.apk
-      - build/ios/ipa/*.ipa
+      # - build/ios/ipa/*.ipa
 
     # Proses publishing (opsional)
     publishing:
