--- a/packages/feature_tv_series/pubspec.yaml
+++ b/packages/feature_tv_series/pubspec.yaml
@@ -27,6 +27,9 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   freezed: ^3.2.0   
+  sqflite: ^2.3.3
+  bloc_test: ^10.0.0
+  mockito: ^5.5.0
 
 resolution: workspace
 # For information on the generic Dart part of this file, see the
