--- a/packages/feature_watchlist/pubspec.yaml
+++ b/packages/feature_watchlist/pubspec.yaml
@@ -29,6 +29,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   freezed: ^3.2.0 
+  mockito: ^5.5.0
+  bloc_test: ^10.0.0
 
 resolution: workspace
 # For information on the generic Dart part of this file, see the
