--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  sqflite_common_ffi: ^2.3.3
 
 flutter:
 resolution: workspace
