--- a/packages/feature_tv_series/pubspec.yaml
+++ b/packages/feature_tv_series/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   freezed_annotation: ^3.1.0
   flutter_bloc: ^9.1.1
   go_router: ^16.2.1
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+  http: ^1.2.2
 
 
 dev_dependencies:
