--- a/packages/feature_watchlist/pubspec.yaml
+++ b/packages/feature_watchlist/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   dartz: ^0.10.1
   go_router: ^16.2.1
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
