feat: integrate Firebase services for analytics and crash reporting
- Added Firebase Crashlytics and Analytics dependencies to the project.
- Configured Firebase in Android and iOS build files.
- Implemented Firebase initialization in the main application entry point.
- Added event logging for user interactions such as viewing items, adding/removing from wishlist, and search queries.
- Included GoogleService-Info.plist and google-services.json for Firebase configuration.
- Updated pubspec.yaml files across multiple packages to include Firebase dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   shared_preferences: ^2.5.3
   get_it: any
   http: any
+  firebase_core: any
+  firebase_analytics: any
+  firebase_crashlytics: any
 
 dev_dependencies:
   flutter_test:
@@ -65,4 +68,3 @@ workspace:
   - packages/feature_tv_series
   - packages/feature_search
   - packages/feature_watchlist
-
