--- a/packages/feature_search/pubspec.yaml
+++ b/packages/feature_search/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   go_router: ^16.2.1
   rxdart: ^0.28.0
+  firebase_analytics: any
 
 dev_dependencies:
   flutter_test:
