--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -22,6 +22,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   sqflite_common_ffi: ^2.3.3
+  integration_test:
+    sdk: flutter
 
 flutter:
 resolution: workspace
