--- a/packages/shared_ui/pubspec.yaml
+++ b/packages/shared_ui/pubspec.yaml
@@ -20,6 +20,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  integration_test:
+    sdk: flutter
+  sqflite_common_ffi: ^2.3.3
 
 resolution: workspace
 # For information on the generic Dart part of this file, see the
