--- a/packages/feature_about/pubspec.yaml
+++ b/packages/feature_about/pubspec.yaml
@@ -15,6 +15,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  integration_test:
+    sdk: flutter
 resolution: workspace
 
 # For information on the generic Dart part of this file, see the
