--- a/packages/feature_movie/pubspec.yaml
+++ b/packages/feature_movie/pubspec.yaml
@@ -33,6 +33,8 @@ dev_dependencies:
   freezed: ^3.2.0     
   mockito: ^5.5.0 
   bloc_test: ^10.0.0
+  integration_test:
+    sdk: flutter
 
 flutter:
 resolution: workspace
