--- a/packages/feature_search/pubspec.yaml
+++ b/packages/feature_search/pubspec.yaml
@@ -34,6 +34,8 @@ dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.6
   freezed: ^3.2.0 
+  integration_test:
+    sdk: flutter
 
 resolution: workspace
 
