--- a/packages/feature_setting/pubspec.yaml
+++ b/packages/feature_setting/pubspec.yaml
@@ -21,6 +21,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  integration_test:
+    sdk: flutter
   mockito: ^5.5.0
   bloc_test: ^10.0.0
   build_runner: ^2.4.6
