--- a/packages/feature_tv_series/pubspec.yaml
+++ b/packages/feature_tv_series/pubspec.yaml
@@ -34,6 +34,8 @@ dev_dependencies:
   sqflite: ^2.3.3
   bloc_test: ^10.0.0
   mockito: ^5.5.0
+  integration_test:
+    sdk: flutter
 
 resolution: workspace
 # For information on the generic Dart part of this file, see the
