--- a/packages/feature_watchlist/pubspec.yaml
+++ b/packages/feature_watchlist/pubspec.yaml
@@ -32,6 +32,8 @@ dev_dependencies:
   freezed: ^3.2.0 
   mockito: ^5.5.0
   bloc_test: ^10.0.0
+  integration_test:
+    sdk: flutter
 
 resolution: workspace
 # For information on the generic Dart part of this file, see the
